--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -64,7 +64,19 @@ input::-moz-focus-inner {
 	border: 0;
 	padding: 0;
 }
-
+.banner{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.arrow_left,
+.arrow_right{
+    font-size: 48px;
+    font-weight: bold;
+    margin: 0 15px;
+    color:darkorange;
+}
 input, select, textarea {
 	-moz-appearance: none;
 	-webkit-appearance: none;
